--- a/app/globals.css
+++ b/app/globals.css
@@ -91,8 +91,12 @@
 }
 
 @utility flex-center {
-  @apply flex items-center justify-center;
+  @apply flex items-center justify-center; 
 }
+
+/* @apply
+
+Позволяет вставить Tailwind-классы внутрь CSS. */
 
 @utility text-gradient {
   @apply to-blue bg-gradient-to-b from-white via-white bg-clip-text font-semibold text-transparent;
@@ -105,6 +109,10 @@
 @utility card-shadow {
   box-shadow: 0px 4px 40px 0px #00000066;
 }
+
+/* @layer
+
+Используется, чтобы сказать Tailwind в какой слой положить стили. base, components, utilities */
 
 @layer base {
   * {
